--- a/package.json
+++ b/package.json
@@ -2,42 +2,36 @@
   "name": "travelbuddy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.jsx",
+  "scripts": {
+    "build": "webpack --mode production",
+    "start": "webpack serve --mode development"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Travel-Buddy-App/TravelBuddy.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "scripts": {
-    "clean": "rm dist/bundle.js",
-    "build-dev": "webpack --mode development",
-    "build-prod": "webpack --mode production",
-    "start": "webpack serve --hot --mode development",
-    "test": "jest"
+  "bugs": {
+    "url": "https://github.com/Travel-Buddy-App/TravelBuddy/issues"
   },
+  "homepage": "https://github.com/Travel-Buddy-App/TravelBuddy#readme",
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-loader": "^4.13.0"
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
-    "@hot-loader/react-dom": "^17.0.2+4.13.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "babel-jest": "^29.0.1",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.0.1",
-    "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.8.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
