--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "start": "cross-env NODE_ENV=production node server/server.js",
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack serve --open\" \"cross-env NODE_ENV=development nodemon server/server.js\"",
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
-    "start": "webpack serve --hot --mode development",
     "test": "jest"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "concurrently": "^7.3.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "fontsource-roboto": "^4.0.0",
+    "nodemon": "^2.0.19",
+    "path": "^0.12.7",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
